--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,8 @@ body {
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
+    /* background-color: var(--color2); */
+    background-color: #3B4CCA;
 }
 
 main {
@@ -37,7 +38,8 @@ main {
 }
 
 section {
-    background-color: var(--color5);
+    /* background-color: var(--color5); */
+    background-color: #3B4CCA;
     width: 1000px;
     max-width: 80%;
     display: flex;
@@ -48,11 +50,26 @@ section {
     padding-bottom: var(--gutter);
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+    /* border: solid 2px var(--color1); */
 }
 
 label > img {
     height: 200px;
+}
+
+label > input {
+    display: none;
+}
+
+input[type="radio"]:checked + img {
+    border: solid 4px #ffde00;
+    border-radius: 25px;
+}
+
+label > span {
+    color: #B3A125;
+    font-size: 22px;
+    text-transform: capitalize;
 }
 
 header {
